# zipwire

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: Makefile  api.rst  backends.rst  conf.py  index.rst  quickstart.rst  requirements.txt  security.rst
misc/wheel-research/: .gitignore  analyse_results.py  wheel_distinfo_layout.md  wheel_distinfo_layout.py
src/zipwire/: __init__.py  __main__.py  _async.py  _base.py  _constants.py  _decompress.py  _errors.py  _parser.py  _sync.py  _types.py  _wheel.py  _zipinfo.py
src/zipwire/backends/: __init__.py  _aiohttp.py  _httpx2.py  _httpx2_async.py  _httpx2_sync.py  _requests.py  _urllib3.py
tests/: conftest.py  test_async.py  test_backends.py  test_cli.py  test_decompress.py  test_integration.py  test_parser.py  test_sync.py  test_wheel.py  test_zipinfo.py
