[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zipwire"
description = "Read and extract files from remote ZIP archives over HTTP range requests"
dynamic = ["version"]
license = "Apache-2.0"
authors = [{ name = "Christian Heimes", email = "christian@python.org" }]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["urllib3>=2.0"]

[project.urls]
Homepage = "https://github.com/tiran/zipwire"
Documentation = "https://zipwire.readthedocs.io/"
Source = "https://github.com/tiran/zipwire"
Issues = "https://github.com/tiran/zipwire/issues"

[project.optional-dependencies]
httpx2 = ["httpx2>=2.0"]
aiohttp = ["aiohttp>=3.9"]
requests = ["requests>=2.31"]
all = ["httpx2>=2.0", "aiohttp>=3.9", "requests>=2.31"]

[dependency-groups]
dev = [
    "zipwire[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpserver>=1.1",
    "coverage[toml]>=7.0",
    "ruff>=0.11",
]
docs = [
    "zipwire[all]",
    "sphinx>=8.0",
    "furo>=2024.1",
    "sphinx-autobuild>=2024.1",
    "myst-parser>=4.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zipwire/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zipwire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.coverage.run]
source = ["zipwire"]

[tool.coverage.report]
show_missing = true
